<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JanelaDois">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvTituloResul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/tvGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genero"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvGeneroResul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/tvPlataforma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plataforma"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvPlataformaResul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/tvModo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modos"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvModoResul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/tvProdutora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/produtora"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvProdutoraResul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/tvLancamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lancamento"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvLancamentoResul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <ImageView
                android:id="@+id/ivImagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/btSair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="fechar"
                android:text="@string/sair" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>